# NodeModulesCleaner

./: CHANGELOG.md  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: semantic-release.yml  tests.yml
.templates/: changelog.md.j2
nmc/: about.py  cli.py  core.py
tests/: test_basic.py
