[project]
name = "node-modules-clearer"
version = "1.0.0.2"
description = "Automatic cleanup of forgotten node_modules directories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filesystempro>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "coverage",
]

[project.scripts]
nmc = "nmc.cli:main"